--- a/brain-behavior_Corr.Rmd
+++ b/brain-behavior_Corr.Rmd
@@ -11,7 +11,7 @@ library(ppcor)
 ```
 
 
-# Freesurfer Precuneus
+# Freesurfer Precuneus (only for visualization)
 ```{r}
 file_path <- "E:/liz/Defense/Neuroimaging/fs_CT_All_winsorized_plot.csv"
 df <- read.csv(file_path) |> na.omit()
@@ -117,11 +117,8 @@ ggsave("E:/liz/Defense/Neuroimaging/ct_mrt_by_sex_square.png",
 
 ```
 
-# ANTs - All
+# ANTs output - All Regions (do partial correlations between CT and behavior and correct for multiple comparisons)
 ```{r}
-library(ppcor)
-
-# --- Load data ---
 df_all   <- read.csv("E:/liz/Defense/Neuroimaging/ants_ct_40_winsorized.csv")          # regions + tasks (same subjects/order)
 df_tasks <- read.csv("E:/liz/Defense/Neuroimaging/ants_ct_40_winsorized_tasks.csv")     # tasks only     (same subjects/order)
 df_cov   <- read.csv("E:/liz/Defense/Neuroimaging/ants_ct_40_winsorized_cov.csv")       # Age, Sex, Volume (ICV)
@@ -219,11 +216,10 @@ results <- data.frame(
 )
 
 write.csv(results, "E:/liz/Defense/Neuroimaging/ants/BH_results.csv", row.names = FALSE)
-
 ```
 
 
-# ANTS ROI Males
+# ANTs output - Regions of interest - Males (do partial correlations between CT and behavior and correct for multiple comparisons)
 ```{r}
 df_all   <- read.csv("E:/liz/Defense/Neuroimaging/ants_roi.csv")          # regions + tasks (same subjects/order)
 df_tasks <- read.csv("E:/liz/Defense/Neuroimaging/ants_ct_40_winsorized_tasks.csv")     # tasks only     (same subjects/order)
@@ -322,12 +318,8 @@ write.csv(results, "E:/liz/Defense/Neuroimaging/ants/ROI_Males_BH_results.csv", 
 ```
 
 
-# ANTS ROI FEMALES
+# ANTs output - Regions of interest - Females (do partial correlations between CT and behavior and correct for multiple comparisons)
 ```{r}
-library(ppcor)
-
-
-# --- Load data ---
 df_all   <- read.csv("E:/liz/Defense/Neuroimaging/ants_roi.csv")          # regions + tasks (same subjects/order)
 df_tasks <- read.csv("E:/liz/Defense/Neuroimaging/ants_ct_40_winsorized_tasks.csv")     # tasks only     (same subjects/order)
 df_cov   <- read.csv("E:/liz/Defense/Neuroimaging/ants_ct_40_winsorized_cov.csv")       # Age, Sex, Volume (ICV)
@@ -428,7 +420,7 @@ results <- data.frame(
 write.csv(results, "E:/liz/Defense/Neuroimaging/ants/ROI_Females_BH_results.csv", row.names = FALSE)
 ```
 
-# Plot subfields
+# Plot hippocampal subfields (do partial corr with GMV and behavior and correct for multiple comparisons)
 # triple plot
 ```{r}
 library(ggplot2)
@@ -487,4 +479,5 @@ print(combo)
 ggsave("hippo_tripanel.tiff", combo, width = 12, height = 4, dpi = 600, bg = "white")
 
 ```
+
 
